--- a/macro/Cargo.toml
+++ b/macro/Cargo.toml
@@ -1,7 +1,8 @@
 [package]
 name = "floem-css-macros"
-version = "0.1.0"
-edition = "2021"
+edition.workspace = true
+version.workspace = true
+license.workspace = true
 
 [lib]
 proc-macro = true
@@ -10,3 +11,4 @@ proc-macro = true
 proc-macro2 = "1.0.89"
 quote = "1.0.37"
 syn = "2.0.87"
+smallvec = { workspace = true }
