--- a/parser/Cargo.toml
+++ b/parser/Cargo.toml
@@ -1,11 +1,13 @@
 [package]
 name = "floem-css-parser"
-edition.workspace = true
 version.workspace = true
+edition = "2021"
+repository = "https://github.com/aalhitennf/floem-css"
+description = "Css parser for floem-css"
 license.workspace = true
 
 [dependencies]
 log.workspace = true
 smallvec.workspace = true
 floem.workspace = true
-floem-css-macros = { path = "../macro" }
+floem-css-macros = { path = "../macro", version = "0.2.0" }
